Lyceum/static/styles/index.css
/* ... */
.post-bar {
    display: flex;
    margin-right: 15px;
}

.post-bar h3 {
    margin-left: auto;
    font-size: 22px;
    font-family: 'Poppins', sans-serif;
    color: black;
}

.messages-box {
    width: 20%;
    display: flex;
}

.post svg {
    margin-left: 0px;
    margin-left: 5px;
    width: 17px;
}

.post-author {
    width: 85%;
}

.post h2{
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    color: black;
    margin: 0px 20px 5px 20px;
}

.post-author-name {
    color: #F28500;
}

.post h4 {
    padding: 10px 20px 10px 20px;
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
    color: black;
}

.post-div {
    border: 2px solid #F28500;
}

/*
.categories li:nth-child(1){
    background: linear-gradient(135deg, rgb(206, 159, 252) 10%, rgb(115, 103, 240) 100%);
}

.categories li:nth-child(2){
    background-image: linear-gradient(32deg, rgba(255,165,0,1) 0%, rgba(255,0,0,1) 80%);
}

.categories li:nth-child(3){
    background-image: linear-gradient(90deg, #99F2C8 0%, #1F4037 100%);
}
*/

.side-title {
    font-family: 'Poppins', sans-serif;
    font-size: 36px;
    color: black;
    margin: 0px 20px 5px 20px;
    text-align: center;
}

.history {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
    min-height: 0;
    border: 4px solid #f28500;
    box-shadow: 0px 10px 22px -3px rgba(0,0,0,0.1);
}

.history ul {
    overflow-y: scroll;
    overflow-x: hidden;
    list-style: none;
    list-style-position: inside;
    cursor: pointer;
}

.history ul {
    -ms-overflow-style: none;  /* Internet Explorer 10+ */
    scrollbar-width: none;  /* Firefox */
}
.history ul::-webkit-scrollbar { 
    display: none;  /* Safari and Chrome */
}

.history li {
    box-sizing: border-box;
    padding: 5px 10px;
    font-family: 'Poppins', sans-serif;
    font-size: 2vw;
    color: black;
    font-weight: 600;
    width: 100%;
    border-bottom: 4px solid #f28500;
    padding-bottom: 1vw;
}

.history-empty-splash {
    font-family: 'Poppins', sans-serif;
    font-size: 2.5vw;
    font-weight: 700;
    font-style: italic;
    margin: 0 0.75vw;
    color: #f28500;
}

.side-div {
    width: 1000vw;
    border: 2px solid #f28500;
}

.watchlist {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
    min-height: 0;
    border: 4px solid #f28500;
    box-shadow: 0px 10px 22px -3px rgba(0,0,0,0.1);
}

.watchlist ul {
    overflow-y: scroll;
    overflow-x: hidden;
    list-style: none;
    list-style-position: inside;
}

.watchlist ul {
    -ms-overflow-style: none;  /* Internet Explorer 10+ */
    scrollbar-width: none;  /* Firefox */
}
.watchlist ul::-webkit-scrollbar { 
    display: none;  /* Safari and Chrome */
}

.watchlist li {
    box-sizing: border-box;
    padding: 5px 10px;
    font-family: 'Poppins', sans-serif;
    font-size: 1.2vw;
    color: black;
    font-weight: 500;
    border-bottom: 4px solid #f28500;
    width: 100%;
}

.watchlist-empty-splash {
    font-family: 'Poppins', sans-serif;
    font-size: 2.5vw;
    font-weight: 700;
    font-style: italic;
    margin: 0 1vw;
    color: #f28500;
}

.gn-orange {
    color: #F28500;
    font-weight: 600;
}

.gn-green {
    color: #30f200;
    font-weight: 600;
}

.DE-shadow-history {
    box-shadow: inset 0 -1vw 0 #F28500;
}

.TH-shadow-history {
    box-shadow: inset 0 -1vw 0 #30f200;
}

.DE-shadow-watchlist {
    box-shadow: inset 0 -9px 0 #F28500;
}

.TH-shadow-watchlist {
    box-shadow: inset 0 -9px 0 #30f200;
}

.sort {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.sort a {
    text-align: center;
    font-family: 'Poppins', sans-serif;
    font-size: 40px;
    font-weight: 800;
    cursor: pointer;
    text-decoration: none;
    color: rgb(0, 0, 0);
    margin: 1vh;
}

#new span:hover {
    color: #F28500;
}

#trending span:hover {
    color: #00baf2;
}

#controversial span:hover {
    color: #5934ff;
}

.sort .post-link {
    font-size: 85px;
    margin-top: 30px;
    margin-bottom: 30px;
}

.sort .post-link:hover {
    color: black;
    box-shadow: inset 0 -48px 0 #F28500;
}

.sort .dashboard-link {
    margin-top: 1vh;
    font-size: 45px;
}

.sort .dashboard-link:hover {
    color: #000;
}

.account-links {
    display: flex;
    flex-direction: column;
}

.account-links a span:hover {
    color: #F28500;
    /*box-shadow: inset 0 -22px 0 #F28500;*/
}

.bottom {
    display: none;
}

.hidden {
    display: none !important;
}

.trending-border {
    border-color: #00baf2 !important;
}

.controversial-border {
    border-color: #5934ff !important;
}

.color-OR {
    color: #F28500;
}

.color-BL {
    color: #00baf2;
}

.color-GR {
    color: #0fb300;
}

.color-RE {
    color: #fb3a3a;
}

.color-PU {
    color: #5934ff;
}

.color-PI {
    color: #cb0cd1;
}

.color-MA {
    color: #ac0000;
}

.color-AQ {
    color: #35d6b3;
}

@media only screen and (max-width: 1322px) {
    .sort .post-link {
        font-size: 60px;
        margin-top: 40px;
    }

    .sort .dashboard-link {
        margin-top: 0px;
        font-size: 39px;
    }

    .sort {
        margin-top: 15px;
    }

    .sort a {
        font-size: 3vw;
        margin: 10px;
    }

    .account-links {
        margin-top: 20px;
    }

    .account-links a span {
        white-space: nowrap;
    }

    .notifs {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .notifs hr {
        width: 100%;
    }
    
    .notifs ul {
        width: 100%;
        height: 25vh;
    }

    .notifs li {
        font-size: 16px;
        margin-right: 5px;
    }

    .watchlist {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .watchlist hr {
        width: 100%;
    }
    
    .watchlist ul {
        width: 100%;
    }

    .watchlist li {
        font-size: 16px;
        margin-right: 5px;
    }
}
/* ... */

